--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: test
+name: Test
 
 on:
   push:
@@ -16,17 +16,11 @@ jobs:
         node : [ 12, 14, 16, 18 ]
     runs-on: ${{ matrix.os }}
     steps:
-
-    - name: checkout
-      uses: actions/checkout@v2
-
-    - name: install node ${{ matrix.node }}
-      uses: actions/setup-node@v3
+    -
+      name: Checkout
+      uses: actions/checkout@v3
+    -
+      name: Test
+      uses: ./.github/actions/test
       with:
-        node-version: ${{ matrix.node }}
-
-    - name: install node_modules
-      run: npm ci
-
-    - name: run tests
-      run: npm run test
+        node: ${{ matrix.node }}
