--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "sideEffects": false,
   "scripts": {
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest --colors"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest --colors --verbose"
   },
   "repository": {
     "type": "git",
